--- a/resources/scss/global/_c-footer.scss
+++ b/resources/scss/global/_c-footer.scss
@@ -19,7 +19,7 @@
         top: 0;
         left: -2.5%;
         bottom: 0;
-        z-index: -1;
+        z-index: 2;
         transform: rotate(2deg);
         transform-origin: left top;
     }
@@ -32,7 +32,7 @@
     width: 106%;
     top: 0;
     right: -2.5%;
-    z-index: -1;
+    z-index: 1;
     transform: rotate(-2deg);
     transform-origin: right top;
 }
